<resources>
    <string name="app_name">Printer</string>
    <string name="click_to_print">Click to print !</string>
    <string name="print_counter">Latest Print Date</string>
    <string name="latest_print">00-00-00 00:00</string>
    <string name="print_by_bluetooth">Print by bluetooth !</string>
    <string name="print_by_usb">Print by USB !</string>
    <string name="ip">IP :</string>
    <string name="ex_ip">192.168.20.77</string>
    <string name="port">Port :</string>
    <string name="ex_port">9100</string>
    <string name="print_by_tcp">Start Print Timer!</string>
    <string name="test_print">Start Printing Test!</string>
    <string name="stop_by_tcp">STOP PRINTING!</string>
</resources>